@@ -18,8 +18,8 @@ package org.apache.solr.core;
  */
 
 import org.apache.lucene.index.IndexWriterConfig;
-import org.apache.lucene.util.PrintStreamInfoStream;
 import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.update.LoggingInfoStream;
 import org.junit.BeforeClass;
 
 public class TestSolrIndexConfig extends SolrTestCaseJ4 {
@@ -33,6 +33,6 @@ public class TestSolrIndexConfig extends SolrTestCaseJ4 {
     IndexWriterConfig iwc = solrConfig.indexConfig.toIndexWriterConfig(h.getCore().getLatestSchema());
 
     assertEquals(123, iwc.getMaxThreadStates());
-    assertTrue(iwc.getInfoStream() instanceof PrintStreamInfoStream);
+    assertTrue(iwc.getInfoStream() instanceof LoggingInfoStream);
   }
 }
